<resources>
    <string name="app_name">BoozeBot</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="new_account">New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create Account</string>
    <string name="is_member">Already a member? Login</string>
    <string name="no_first_name"> First name is required!</string>
    <string name="no_last_name"> Last name is required!</string>
    <string name="no_username"> Username is required!</string>
    <string name="no_email"> Email is required!</string>
    <string name="no_pw"> Password is required!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_drink">Select Your Drink: </string>
    <string name="recipes">Recipes</string>
    <string name="queued_drinks">Queued Drinks</string>
    <string name="error_invalid_email">The email address is invalid</string>
    <string name="error_incorrect_password">The password is incorrect</string>
</resources>
